fix(): overflow hidden

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -11,6 +11,7 @@ html, body
   -webkit-tap-highlight-color: transparent
   -moz-osx-font-smoothing: grayscale
   -webkit-font-smoothing: antialiased
+  overflow: hidden
 
   a
     color: $green
